--- a/playground/app/assets/css/main.css
+++ b/playground/app/assets/css/main.css
@@ -1,3 +1,3 @@
 @import "tailwindcss";
 @import "@nuxt/ui";
-@import "../../../../src/assets/main.css";
+@import "../../../../src/runtime/assets/main.css";
